# fastapi-start

./: .env.example  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b554959016f6_first_revision.py
app/: utils.py
app/api/: deps.py
app/api/api_v1/endpoints/: items.py  login.py  users.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
app/db/: init_db.py
app/email-templates/html/: reset.html  welcome.html
app/email-templates/mjml/: reset.mjml  welcome.mjml
app/models/: item.py  user.py
app/schemas/: __init__.py  item.py  password.py  user.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_items.py  test_login.py  test_users.py
app/tests/crud/: test_item.py  test_user.py
app/tests/utils/: item.py  user.py  utils.py
