[tool.poetry]
name = "fastapi-start"
version = "0.1.0"
description = ""
authors = ["Wilfredo Huancollo <wilfredo_sj@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.0"
email-validator = "^1.2.1"
emails = "^0.6"
fastapi = "^0.89.1"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
requests = "^2.28.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^1.4.46"
httpx = "^0.23.3"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
